commit do projeto API

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -28,27 +28,28 @@
 
     <h2>Jogos em Promoção</h2>
     <mat-grid-list cols="3">
-        <mat-grid-tile>
+        <mat-grid-tile *ngfor="let produto of produtos">
             <mat-card class="example-card">
-                <img mat-card-image src="./assets/img/jogo1.PNG" alt="Jogo 1">
+                <img mat-card-image src="./assets/img/{{produto.Foto}}" alt="Jogo 1">
         
                 <mat-card-header>
-                  <mat-card-title>Jogo 1</mat-card-title>
+                  <mat-card-title>{{produto.produto}}Jogo 1</mat-card-title>
                 </mat-card-header>
                 
                 <mat-card-content>
                   <p>
-                    Descrição do jogo.
+                    {{produto.descricao}}
                   </p>
                 </mat-card-content>
                 <mat-card-actions>
-                  <p>R$ 300,00</p>
-                  <button mat-button>Comprar</button>
+                  <p>{{produto.preco | currency:  'BRL'}}</p>
+                  <button mat-raised-button color="primary">Comprar</button>
                 </mat-card-actions>
               </mat-card>
         </mat-grid-tile>
+        <!-- 
         <mat-grid-tile>
-            <mat-card class="example-card">
+          <mat-card class="example-card">
                 <img mat-card-image src="./assets/img/jogo2.PNG" alt="Jogo 2">
         
                 <mat-card-header>
@@ -84,7 +85,8 @@
                   <button mat-button>Comprar</button>
                 </mat-card-actions>
               </mat-card>
-        </mat-grid-tile>
+            </mat-grid-tile>
+            -->
       </mat-grid-list>
       
 
